Coverity analysis defect 121318: Parse warning

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • QO 2022-02-07
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Parse warning

      A parse warning may reduce maintainability of the code, or it may indicate a serious error. A parse warning from the Coverity parser may indicate a bug, or poor coding practice
      /src/mongo/db/index/expression_keys_private.cpp:756: PW.PARAMETER_HIDDEN 121318 declaration hides parameter "obj" (declared at line 656)

            Assignee:
            James Wahlin
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: