SERVER-62388 Fix variable shadowing in ExpressionKeysPrivate::getS2Keys